--- a/blocks/page.css
+++ b/blocks/page.css
@@ -2,4 +2,6 @@
   max-width: 1600px;
   min-height: 1100px;
   font-family: Arial, Helvetica, sans-serif;
+  background-color: #fff;
+  margin: 0 auto;
 }
