--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,7 +1,7 @@
 .page {
+  min-width: 1100px;
   max-width: 1600px;
-  min-height: 1100px;
-  font-family: Arial, Helvetica, sans-serif;
-  background-color: #fff;
   margin: 0 auto;
+  font-size: 16px;
+  line-height: 1.5;
 }
