--- a/blocks/page.css
+++ b/blocks/page.css
@@ -3,3 +3,11 @@
   font-family: "Inter", sans-serif;
   margin: 0;
 }
+body {
+  font-family: "Inter", Arial, sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  font-style: normal;
+  line-height: 1.5;
+  color: #6f6f6f;
+}
