--- a/blocks/reservation.css
+++ b/blocks/reservation.css
@@ -1,6 +1,6 @@
 .reservation {
   padding: 100px 80px;
-  background-color: #f2f2f2; /* gris claro como en el brief */
+  background-color: #f2f2f2;
 }
 
 .reservation__title {
