--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -7,30 +7,21 @@
   flex-wrap: wrap;
   box-sizing: border-box;
 }
+.footer__links {
+  display: flex;
+  gap: 10px;
+}
 
-.footer .paragraph {
+.footer__link {
+  text-decoration: none;
+  color: #2f80ed;
+}
+
+footer.footer .paragraph {
+  margin-bottom: 5px;
   font-family: "Inter", Arial, sans-serif;
   font-size: 16px;
   font-weight: 500;
   line-height: 20px;
   color: #838383;
-  margin: 0;
-}
-
-.footer__links {
-  display: flex;
-  gap: 20px;
-}
-
-.footer__link {
-  font-family: "Inter", Arial, sans-serif;
-  font-size: 16px;
-  font-weight: 500;
-  color: #2f80ed;
-  text-decoration: none;
-  transition: color 0.3s ease;
-}
-
-.footer__link:hover {
-  color: #1c5ed6;
 }
