--- a/pages/index.css
+++ b/pages/index.css
@@ -1,11 +1,11 @@
-@import url("../vendor/normalize.css");
+/* @import url("../vendor/normalize.css");
 @import url("../blocks/page.css");
 @import url("../blocks/header.css");
 @import url("../blocks/nav.css");
 @import url("../blocks/recipes.css");
 @import url("../blocks/reservation.css");
 @import url("../blocks/footer.css");
-
+ */
 .page {
   background-color: #ffffff;
   font-family: "Inter", sans-serif;
