--- a/pages/index.css
+++ b/pages/index.css
@@ -6,6 +6,12 @@
 @import url("../blocks/reservation.css");
 @import url("../blocks/footer.css");
 
+.page {
+  background-color: #ffffff;
+  font-family: "Inter", sans-serif;
+  margin: 0;
+}
+
 body {
   font-family: "Inter", Arial, sans-serif;
   font-size: 16px;
