--- a/pages/index.css
+++ b/pages/index.css
@@ -12,7 +12,7 @@
   max-width: 1600px;
   font-family: "Inter", Arial, sans-serif;
   font-size: 16px;
-  line-height: 1.5;
+  line-height: 24px;
   color: #6f6f6f;
 }
 
