--- a/pages/index.css
+++ b/pages/index.css
@@ -12,7 +12,7 @@
   max-width: 1600px;
   font-family: "Inter", Arial, sans-serif;
   font-size: 16px;
-  line-height: 24px;
+  line-height: 1.5;
   color: #6f6f6f;
 }
 
@@ -256,8 +256,8 @@ footer.footer .paragraph {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  margin-top: 60px;
-  flex-grow: 1;
+  margin-top: 40px;
+  margin-bottom: 60px;
   position: relative;
 }
 
@@ -267,7 +267,7 @@ footer.footer .paragraph {
   font-weight: 400;
   line-height: 30px;
   max-width: 638px;
-  margin: 0 0 20px;
+  margin: 0 0 8px;
   color: #000000;
   z-index: 2;
 }
@@ -281,7 +281,7 @@ footer.footer .paragraph {
   font-size: 60px;
   font-weight: 400;
   line-height: 72px;
-  margin: 70px 0 20px;
+  margin: 20px 0 16px;
   max-width: 660px;
   z-index: 2;
 }
@@ -322,7 +322,7 @@ footer.footer .paragraph {
 }
 .header__image {
   position: absolute;
-  top: 124px;
+  top: 90px;
   right: 80px;
   width: 646px;
   height: 568px;
@@ -350,7 +350,7 @@ footer.footer .paragraph {
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
-  padding: 0 80px 80px;
+  padding: 60px 80px 80px;
   width: 100%;
   box-sizing: border-box;
   position: relative;
