--- a/pages/index.css
+++ b/pages/index.css
@@ -281,8 +281,8 @@ footer.footer .paragraph {
   font-size: 60px;
   font-weight: 400;
   line-height: 72px;
-  margin: 20px 0 16px;
-  max-width: 660px;
+  margin: 183px 0 28px 0px;
+  max-width: 709px;
   z-index: 2;
 }
 .header__title-accent {
@@ -322,12 +322,11 @@ footer.footer .paragraph {
 }
 .header__image {
   position: absolute;
-  top: 90px;
-  right: 80px;
+  top: 124px;
+  right: 5px;
   width: 646px;
   height: 568px;
   object-fit: contain;
-  z-index: 1;
 }
 .header__logo {
   width: 105px;
@@ -350,12 +349,12 @@ footer.footer .paragraph {
   display: flex;
   justify-content: space-between;
   align-items: flex-end;
-  padding: 60px 80px 80px;
+  padding: 60px 0px 40px;
   width: 100%;
   box-sizing: border-box;
   position: relative;
   z-index: 2;
-  margin-top: auto;
+  margin: auto 0 0;
 }
 .header__paragraph {
   font-family: "Inter", Arial, sans-serif;
