--- a/pages/index.css
+++ b/pages/index.css
@@ -12,16 +12,7 @@
   max-width: 1600px;
   font-family: "Inter", Arial, sans-serif;
   font-size: 16px;
-  line-height: 1.5;
-  color: #6f6f6f;
-}
-
-body {
-  font-family: "Inter", Arial, sans-serif;
-  font-size: 16px;
-  font-weight: 400;
-  font-style: normal;
-  line-height: 1.5;
+  line-height: 20px;
   color: #6f6f6f;
 }
 
