--- a/pages/index.css
+++ b/pages/index.css
@@ -120,25 +120,24 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
 }
 
 .reservation__title {
-  font-family: "Noto Serif", serif;
-  font-size: 36px;
-  font-weight: 500;
-  text-align: center;
-  margin: 0 auto 60px auto;
-  color: #2e2e2e;
-  max-width: 600px;
+  font-size: 32px;
+  line-height: 38px;
+  font-weight: 600;
+  color: #2a2a2a;
+  margin: 0 auto 40px auto;
 }
 
 .reservation__form {
+  max-width: 385px;
+  width: 100%;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  max-width: 420px;
-  margin: 0 auto;
-  gap: 25px;
+  gap: 60px;
 }
 .form {
   display: flex;
@@ -154,50 +153,49 @@
   margin: 0;
 }
 
-.form__input {
-  font-size: 16px;
-  padding: 10px 14px;
-  margin-top: 8px;
+.reservation__input {
+  padding: 15px;
+  font-size: 15px;
   border: 1px solid #ccc;
-  border-radius: 8px;
-  font-family: inherit;
+  border-radius: 4px;
+  outline: none;
 }
-.form__label {
+.reservation__label {
+  font-size: 14px;
+  text-align: left;
+  color: #000000;
   display: flex;
   flex-direction: column;
-  font-size: 16px;
-  color: #333;
-  font-weight: 500;
+  gap: 8px;
 }
 .form__checkbox {
-  width: 16px;
-  height: 16px;
+  width: 20px;
+  height: 20px;
 }
 .form__checkbox-group {
   display: flex;
   align-items: center;
-  justify-content: center;
-  gap: 8px;
-  font-size: 14px;
-  color: #555;
-  margin-top: 20px;
+  gap: 12px;
+  margin-top: 32px;
+  max-width: 385px;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 12px;
 }
-
-.form__button {
-  background-color: #2563eb;
-  color: white;
-  padding: 12px 32px;
+.reservation__button {
+  margin-top: 0px;
+  padding: 15px 0;
+  background-color: #2a72f8;
+  color: #ffffff;
   border: none;
-  border-radius: 8px;
-  font-size: 16px;
-  font-weight: 500;
+  border-radius: 4px;
+  font-size: 15px;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  align-self: center;
 }
 
-.form__button:hover {
-  background-color: #1d4ed8;
+.reservation__button:hover {
+  background-color: #1f5ede;
 }
 .footer {
   background-color: #f2f2f2;
