--- a/pages/index.css
+++ b/pages/index.css
@@ -124,11 +124,14 @@
 }
 
 .reservation__title {
-  font-size: 32px;
-  line-height: 38px;
-  font-weight: 600;
+  font-family: "Inter", Arial, sans-serif;
+  font-style: normal;
+  font-size: 44px;
+  font-weight: 500;
+  line-height: 52px;
   color: #2a2a2a;
-  margin: 0 auto 40px auto;
+  margin-bottom: 80px;
+  text-align: center;
 }
 
 .reservation__form {
@@ -159,9 +162,11 @@
   border: 1px solid #ccc;
   border-radius: 4px;
   outline: none;
+  height: 60px;
+  width: 100%;
 }
 .reservation__label {
-  font-size: 14px;
+  font-size: 16px;
   text-align: left;
   color: #000000;
   display: flex;
@@ -192,6 +197,9 @@
   font-size: 15px;
   cursor: pointer;
   transition: background-color 0.3s ease;
+  height: 60px;
+  width: 70%;
+  margin-left: 30px;
 }
 
 .reservation__button:hover {
