--- a/pages/index.css
+++ b/pages/index.css
@@ -1,388 +1,7 @@
-/* @import url("../vendor/normalize.css");
+@import url("../vendor/normalize.css");
 @import url("../blocks/page.css");
 @import url("../blocks/header.css");
 @import url("../blocks/nav.css");
 @import url("../blocks/recipes.css");
 @import url("../blocks/reservation.css");
-@import url("../blocks/footer.css"); */
-
-.page {
-  margin: 0 auto;
-  min-width: 1100px;
-  max-width: 1600px;
-  font-family: "Inter", Arial, sans-serif;
-  font-size: 16px;
-  line-height: 20px;
-  color: #6f6f6f;
-}
-
-.recipes {
-  background-image: url("../images/background_recipes.svg");
-  background-color: #0a2850;
-  background-repeat: no-repeat;
-  background-position: top center;
-  background-size: 100% 100%;
-  padding: 40px 80px 100px;
-  width: 100%;
-  min-height: 100vh;
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-.recipes__content {
-  max-width: 1140px;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
-}
-
-.recipes__title {
-  font-family: "Inter", Arial, sans-serif;
-  font-size: 44px;
-  font-weight: 500;
-  line-height: 52px;
-  color: #ffffff;
-  text-align: left;
-  max-width: 580px;
-  margin: 0 0 24px;
-}
-
-.recipes__subtitle {
-  font-family: "Noto Serif", "Times New Roman", serif;
-  font-size: 20px;
-  line-height: 30px;
-  color: #ffffff;
-  max-width: 438px;
-  text-align: left;
-  margin: 0 0 40px;
-}
-
-.recipes__videos {
-  display: flex;
-  gap: 40px;
-  justify-content: center;
-  flex-wrap: wrap;
-  width: 100%;
-}
-
-.recipes__video-item {
-  width: 480px;
-  display: flex;
-  flex-direction: column;
-}
-
-.recipes__iframe {
-  width: 100%;
-  height: 273px;
-  border: none;
-  border-radius: 16px;
-}
-
-.caption {
-  display: flex;
-  justify-content: space-between;
-  font-family: "Inter", Arial, sans-serif;
-  width: 100%;
-  font-size: 20px;
-  font-weight: 500;
-  line-height: 30px;
-  align-items: center;
-  color: #ffffff;
-  margin-top: 24px;
-}
-
-.recipes__caption-row {
-  display: none;
-  justify-content: space-between;
-  width: 100%;
-  margin-top: 0px;
-}
-
-.caption__text,
-.caption__time {
-  font-family: "Inter", Arial, sans-serif;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 24px;
-  color: #ffffff;
-}
-.reservation {
-  background-color: #d9e7ff;
-  background-image: url("../images/background_reservation.svg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-  padding: 100px 0 120px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-}
-
-.reservation__title {
-  font-family: "Inter", Arial, sans-serif;
-  font-style: normal;
-  font-size: 44px;
-  font-weight: 500;
-  line-height: 52px;
-  color: #2a2a2a;
-  text-align: center;
-  margin: 0 auto 80px;
-}
-
-.reservation__form {
-  max-width: 385px;
-  width: 100%;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  gap: 60px;
-}
-.form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 20px;
-}
-
-.form__fieldset {
-  width: 100%;
-  border: none;
-  padding: 0;
-  margin: 0;
-}
-
-.reservation__input {
-  padding: 15px;
-  font-size: 15px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  outline: none;
-  height: 60px;
-  width: 100%;
-}
-.reservation__label {
-  font-size: 16px;
-  text-align: left;
-  color: #000000;
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-}
-.reservation__checkbox {
-  width: 20px;
-  height: 20px;
-}
-.reservation__checkbox-group {
-  display: flex;
-  align-items: center;
-  gap: 12px;
-  margin-top: 32px;
-  max-width: 385px;
-  margin-left: auto;
-  margin-right: auto;
-  font-size: 12px;
-}
-.reservation__button {
-  margin-top: 0px;
-  padding: 15px 0;
-  background-color: #2a72f8;
-  color: #ffffff;
-  border: none;
-  border-radius: 4px;
-  font-size: 15px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-  height: 60px;
-  width: 70%;
-  margin-left: 30px;
-}
-
-.reservation__button:hover {
-  background-color: #1f5ede;
-}
-.footer {
-  background-color: #f2f2f2;
-  padding: 60px 80px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: wrap;
-  box-sizing: border-box;
-}
-.footer__links {
-  display: flex;
-  gap: 10px;
-}
-
-.footer__link {
-  text-decoration: none;
-  color: #2f80ed;
-}
-
-footer.footer .paragraph {
-  margin-bottom: 5px;
-  font-family: "Inter", Arial, sans-serif;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 20px;
-  color: #838383;
-}
-.header {
-  position: relative;
-  height: 100vh;
-  padding: 30px 80px 0;
-  background-image: url("../images/background_header.svg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: top right;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  min-width: 1100px;
-  box-sizing: border-box;
-}
-
-.nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.nav__links {
-  display: flex;
-  gap: 20px;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-.nav__link {
-  color: #000000;
-  text-decoration: none;
-  font-weight: 500;
-  font-family: "Inter", Arial, sans-serif;
-}
-.nav__link:hover {
-  text-decoration: underline;
-}
-
-.header__content {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  margin-top: 40px;
-  margin-bottom: 60px;
-  position: relative;
-}
-
-.header__description {
-  font-family: "Inter", sans-serif;
-  font-size: 20px;
-  font-weight: 400;
-  line-height: 30px;
-  max-width: 638px;
-  margin: 0 0 8px;
-  color: #000000;
-  z-index: 2;
-}
-
-.header__text {
-  max-width: 660px;
-  z-index: 2;
-}
-.header__title {
-  font-family: "Inter", sans-serif;
-  font-size: 60px;
-  font-weight: 400;
-  line-height: 72px;
-  margin: 183px 0 28px 0px;
-  max-width: 709px;
-  z-index: 2;
-}
-.header__title-accent {
-  font-family: "Noto Serif", serif;
-  font-style: italic;
-  font-size: 58px;
-  line-height: 72px;
-  color: #2f80ed;
-}
-
-.header__title-bold {
-  font-size: 58px;
-  font-weight: 800;
-  line-height: 72px;
-  letter-spacing: -1px;
-  color: #000000;
-}
-
-.header__schedule {
-  margin-top: auto;
-  margin-bottom: 80px;
-  padding: 0 80px;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-start;
-  box-sizing: border-box;
-  width: 100%;
-}
-
-.header__footer .header__schedule-address {
-  text-align: right;
-  align-items: flex-end;
-  justify-content: flex-start;
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-}
-.header__image {
-  position: absolute;
-  top: 124px;
-  right: 5px;
-  width: 646px;
-  height: 568px;
-  object-fit: contain;
-}
-.header__logo {
-  width: 105px;
-  height: 39px;
-}
-.header__schedule-address {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  gap: 8px;
-  text-align: right;
-  margin-top: 40px;
-}
-.header__schedule-group {
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-}
-.header__footer {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
-  padding: 60px 0px 40px;
-  width: 100%;
-  box-sizing: border-box;
-  position: relative;
-  z-index: 2;
-  margin: auto 0 0;
-}
-.header__paragraph {
-  font-family: "Inter", Arial, sans-serif;
-  font-size: 18px;
-  line-height: 28px;
-  font-weight: 500;
-  margin: 0;
-  color: #6f6f6f;
-}
-
-.header__paragraph_bold {
-  font-weight: 800;
-}
+@import url("../blocks/footer.css");
